export interface Category {
  category_id: number;
  slug: string;
  category_name: string;
}
