export interface Teacher {
  teacher_id: number;
  slug: string;
  full_name: string;
  title: string;
  bio: string;
  credentials: string[];
  initials: string;
  rating_avg: number;
}
